--- a/sqlsaturday1037/readme
+++ b/sqlsaturday1037/readme
@@ -1,3 +1,3 @@
 
 Files related to presentation in SQL Saturday 1037 - SP (Nov/2022)
-TERRAFORM 101 
+Terraform 101Implementando Bases de Dados do Azure como Código
